--- a/wp-content/themes/understrap-child/sass/theme/partials/_global_styles.scss
+++ b/wp-content/themes/understrap-child/sass/theme/partials/_global_styles.scss
@@ -108,7 +108,7 @@ body {
 section{}
 header{}
 title{}
-hgroup{}
+div{}
 title{}
 figure{}
 article{}
@@ -144,8 +144,8 @@ article{}
    margin-right: auto;
    margin-left: auto;
    position: relative;
-   max-width: 100%;
    top: 0;
+   overflow: hidden;
 }
 
 .article__wrapper-fluid{
