--- a/wp-content/themes/understrap-child/sass/theme/partials/_global_styles.scss
+++ b/wp-content/themes/understrap-child/sass/theme/partials/_global_styles.scss
@@ -146,6 +146,9 @@ article{}
    position: relative;
    top: 0;
    overflow: hidden;
+// &--overlap{
+//   overflow: visible;
+// }
 }
 
 .article__wrapper-fluid{
