--- a/wp-content/themes/understrap-child/sass/theme/partials/_layout_styles.scss
+++ b/wp-content/themes/understrap-child/sass/theme/partials/_layout_styles.scss
@@ -971,7 +971,7 @@ p.home-page-summary__claim--fancy {
   width: 118%;
   z-index: 2;
   height: 125%;
-  overflow-y: hidden;
+  // overflow-y: hidden;
 
   @media (min-width: 375px) {
     width: 127%;
@@ -1081,7 +1081,7 @@ p.home-page-summary__claim--fancy {
   }
 
   .home-page-summary__claim_wrapper {
-    height: 100vh;
+    height: 125vh;
   }
 
   .container.home-page-summary__claim_container {
@@ -4695,5 +4695,31 @@ padding-right: 0px;
 .container.container--planning{
   min-height: 200em;
   justify-content: flex-start;
+}
+
+.hackfix{
+background: #000;
+
+    flex: 0 0 0;
+    display: flex;
+    overflow: visible;
+    width: 100%;
+    height: 20em;
+    min-height: 20em;
+&--bottom{
+  border-top: 1.5em solid #daeaf7;
+  border-left: 1.5em solid #daeaf7;
+  border-right: 1.5em solid #daeaf7;
+
+}
+}
+
+.strengths__page-header_container{
+  @include mq("tablet"){
+    border-bottom: 1.5em solid #daeaf7;
+  border-left: 1.5em solid #daeaf7;
+  border-right: 1.5em solid #daeaf7;
+  border-top: none;
+}
 }
 
