--- a/wp-content/themes/understrap-child/sass/theme/partials/_type_style_variables.scss
+++ b/wp-content/themes/understrap-child/sass/theme/partials/_type_style_variables.scss
@@ -229,27 +229,157 @@ p {
 &__credit{}
 }
 
+
+
 .diagram{
-&__headline{}
-&__subhead{}
-&__sublist{}
-&__deck{
-	&__display-text{}
-	&__body-text{}
-&--lg{}
-&--sm{}
+&__header-headline{
+  @include diagram__header-headline();
+  font-weight: 400;
+  flex: 1 0 100%;
+&--f-align-start{
+  align-self: flex-start;
 }
-&__copy{
-	&--short{}
-	&--long{}
+@include mq("tablet"){
+  flex: 0 0 81%;
 }
-&__caption{}
-&__quote{}
-&__quip{}
-&__footnote{}
-&__legal{}
-&__citation{}
 }
+&__header-copy{
+  @include diagram__header-copy();
+  display: flex;
+  @include mq("tablet"){ 
+    flex: 0 0 81%;
+}
+}
+&__content{
+  &--objectives-icon{
+    >svg{
+      width: 100%;
+      @include mq("tablet"){
+        width: 83%;
+      }
+    }
+  }
+}
+
+}
+
+.diagram-item{
+  &__container{
+   width: 100%;
+   max-width: 100%;
+   position: relative;
+   flex: 0 0 auto;
+ 
+    &--23x77row{
+    display: flex;
+    justify-content: center;
+     @include mq("tablet"){ 
+    align-items: center;
+    flex-direction: row;
+    }
+  }
+    &--23row{
+           display: flex;
+           flex: 0 0 0;
+           min-height: 10em;
+           width: 38%;
+      @include mq("tablet"){ 
+        flex: 0 0 23%;
+      max-width: 23%;
+      display: flex;
+      min-height: 0;
+      flex-direction: column;
+      align-items: center;
+    }
+  }
+    &--23row-offset{
+      display: none;
+      @include mq("tablet"){
+      display: none;
+      flex: 0 0 23%;
+      max-width: 23%;
+      min-height: 0;
+    }
+  }
+    &--77row{
+      margin-block-end: 0px;
+  margin-block-start: 0px;
+  list-style-position: inside;
+  padding-inline-start: 0px;
+  -webkit-padding-start: 0px;
+      flex: 0 0 73%;
+      width: 73%;
+      text-align: center;
+    @include mq("tablet"){
+text-align: left;
+display: flex;
+flex-wrap: wrap;
+      flex: 0 0 73%;
+      max-width: 73%;
+      min-height: 0;
+    }
+    }
+  }
+  &__headline{
+font-weight: 300;
+@include diagram__item-headline();
+}
+  &__copy{
+font-weight: 200;
+@include diagram__item-copy();
+
+
+&--objectives-diagram{
+text-align: justify;
+width: 100%;
+@include mq("tablet"){
+max-width: 73%;
+flex: 0 0 73%;
+display: flex;
+min-height: 0;
+text-align: left;
+}
+}
+}
+}
+
+
+
+
+
+// .diagram__objectives{
+// .diagram__content--objectives-icon{order: 1;}
+// .diagram-item__headline{order: 2;}
+// .diagram-item__copy{order: 3;}
+// @include mq("tablet"){
+//   .diagram__content--objectives-icon{order: 2;}
+// .diagram-item__headline{order: 1;}
+// .diagram-item__copy{order: 3;}
+// }
+// }
+
+
+
+
+// &__subhead{}
+// &__sublist{}
+// &__deck{
+// 	&__display-text{}
+// 	&__body-text{}
+// &--lg{}
+// &--sm{}
+// }
+// &__copy{
+// 	&--short{}
+// 	&--long{}
+// }
+// &__caption{}
+// &__quote{}
+// &__quip{}
+// &__footnote{}
+// &__legal{}
+// &__citation{}
+
 
 .card{
 &__headline{}
@@ -277,6 +407,426 @@ p {
 // 	}
 
 // }
+.section{
+  display: block;
+  position: relative;
+  overflow: hidden;
+  &__fluid {
+    width: 100%;
+  }
+
+  &__cover {
+    height: 100vh;
+    width: 100%;
+  }
+
+  &--flex {
+    display: flex;
+  }
+
+  // &__wrapper{
+  // &--fluid{
+  //   width: 100%;
+  //   max-width: 100%;
+  // }
+  // }
+
+&--container{
+  @extend .container;
+}
+  &--overlay {
+    z-index: 3;
+  }
+
+  &--background {
+    position: absolute;
+    z-index: 0;
+  }
+
+  &--sticky {
+    position: sticky;
+  }
+
+  &--fixed {
+    position: fixed;
+  }
+
+  &--placed {
+    position: absolute;
+  }
+}
+
+.article{
+  display: block;
+  position: relative;
+  overflow: hidden;
+@include vr($padding-top: 3, $padding-bottom: 3);
+  &--fluid {
+    width: 100%;
+  }
+
+  &--cover {
+    height: 100vh;
+    width: 100%;
+  }
+
+  &--flex {
+    display: flex;
+  }
+
+&--container{
+  @extend .container;
+}
+  &--overlay {
+    z-index: 3;
+  }
+
+  &--background {
+    position: absolute;
+    z-index: 0;
+  }
+
+  &--sticky {
+    position: sticky;
+  }
+
+  &--fixed {
+    position: fixed;
+  }
+
+  &--placed {
+    position: absolute;
+  }
+}
+
+.container{
+  display: block;
+  position: relative;
+  &__fluid {
+    width: 100%;
+  }
+
+  &__cover {
+    height: 100vh;
+    width: 100%;
+  }
+
+  &--flex {
+    display: flex;
+  }
+
+&--container{
+  @extend .container;
+}
+  &--overlay {
+    z-index: 3;
+  }
+
+  &--background {
+    position: absolute;
+    z-index: 0;
+  }
+
+  &--sticky {
+    position: sticky;
+  }
+
+  &--fixed {
+    position: fixed;
+  }
+
+  &--placed {
+    position: absolute;
+  }
+}
+
+.wrapper{
+  display: block;
+  position: relative;
+  &__fluid {
+    width: 100%;
+  }
+
+  &__cover {
+    height: 100vh;
+    width: 100%;
+  }
+
+  &--flex {
+    display: flex;
+  }
+
+&--container{
+  @extend .container;
+}
+  &--overlay {
+    z-index: 3;
+  }
+
+  &--background {
+    position: absolute;
+    z-index: 0;
+  }
+
+  &--sticky {
+    position: sticky;
+  }
+
+  &--fixed {
+    position: fixed;
+  }
+
+  &--placed {
+    position: absolute;
+  }
+}
+
+.header{
+  display: block;
+  position: relative;
+  &__container{
+&--strengths{
+  flex-wrap: wrap;
+      display: flex;
+
+    // display: block;
+    flex-direction: row;
+    align-items: flex-start;
+    flex-wrap: wrap;
+    padding-left: 0px;
+    padding-right: 0px;
+    min-height: 0;
+    flex: 1;
+    @include mq("tablet"){
+    display: flex;
+    min-height: 0;
+    flex: 0 0 auto;
+    max-width: 61%;
+    min-height: 0;
+    @include mq("tablet-wide"){
+    z-index: 3;
+  }
+
+    }
+}
+
+}
+  &__list{
+    &--strengths{
+        position: relative;
+  z-index: 3;
+  @include mq("tablet"){
+      flex: 0 0 auto;
+  max-width: 61%;
+  display: flex;
+  min-height: 0;
+  flex-direction: column;
+  }
+    }
+  }
+
+  &__fluid {
+    width: 100%;
+  }
+
+  &__cover {
+    height: 100vh;
+    width: 100%;
+  }
+
+  &--flex {
+    display: flex;
+  }
+
+&--container{
+  @extend .container;
+}
+  &--overlay {
+    z-index: 3;
+  }
+
+  &--background {
+    position: absolute;
+    z-index: 0;
+  }
+
+  &--sticky {
+    position: sticky;
+  }
+
+  &--fixed {
+    position: fixed;
+  }
+
+  &--placed {
+    position: absolute;
+  }
+}
+.content{
+  display: block;
+  position: relative;
+  &__fluid {
+    width: 100%;
+  }
+
+  &__cover {
+    height: 100vh;
+    width: 100%;
+  }
+
+  &--flex {
+    display: flex;
+  }
+
+&--container{
+  @extend .container;
+}
+  &--overlay {
+    z-index: 3;
+  }
+
+  &--background {
+    position: absolute;
+    z-index: 0;
+  }
+
+  &--sticky {
+    position: sticky;
+  }
+
+  &--fixed {
+    position: fixed;
+  }
+
+  &--placed {
+    position: absolute;
+  }
+}
+.block{
+  display: block;
+  position: relative;
+  &__fluid {
+    width: 100%;
+  }
+
+  &__cover {
+    height: 100vh;
+    width: 100%;
+  }
+
+  &--flex {
+    display: flex;
+  }
+
+&--container{
+  @extend .container;
+}
+  &--overlay {
+    z-index: 3;
+  }
+
+  &--background {
+    position: absolute;
+    z-index: 0;
+  }
+
+  &--sticky {
+    position: sticky;
+  }
+
+  &--fixed {
+    position: fixed;
+  }
+
+  &--placed {
+    position: absolute;
+  }
+}
+.item {
+  display: block;
+  position: relative;
+  &__fluid {
+    width: 100%;
+  }
+
+  &__cover {
+    height: 100vh;
+    width: 100%;
+  }
+
+  &--flex {
+    display: flex;
+  }
+
+&--container{
+  @extend .container;
+}
+  &--overlay {
+    z-index: 3;
+  }
+
+  &--background {
+    position: absolute;
+    z-index: 0;
+  }
+
+  &--border{
+    border: thin solid $pattens;
+  }
+
+  &--sticky {
+    position: sticky;
+  }
+
+  &--fixed {
+    position: fixed;
+  }
+
+  &--placed {
+    position: absolute;
+  }
+}
+
+
+
+.pagination {
+  display: flex;
+  flex: 0 0 auto;
+  margin-top: auto;
+  @include mq("tablet") {
+    margin-bottom: auto;
+  }
+&--overlay{
+  position: relative;
+  z-index: 3;
+}
+&--reasons{
+  @include vr($margin: 4 0);
+}
+&--strengths{
+  @include mq("tablet"){
+    padding-bottom: .25em;
+  }
+}
+}
+
+
+.link{
+  &__chevron{
+    height: 3rem;
+    width: 3rem;
+    border-radius: .75em;
+    display: flex;
+    align-items: center;
+    min-height: 0;
+  }
+  &__text{}
+
+}
+
+
+
+
 
 
 .title {
@@ -343,13 +893,21 @@ p {
   // }
   &__header{
     @include header__headline(); 
-  @include mq("desktop") {
-    @include header__headline-lg();
-  }
+    @include mq("desktop") {
+      @include header__headline-lg();
+    }
+
 &--white{
 	color: $white;
 }
+&--strengths{
+  @include vr($font-size: 6);
+  @include mq("tablet"){
+    @include vr($font-size: 8);
+  }
 }
+}
+
 
   &__block{
 	@include block__headline();
@@ -359,6 +917,7 @@ p {
 &__item{
 	@include item__headline();
 }
+
 
   &--center {
     text-align: center;
@@ -471,9 +1030,29 @@ p {
 .deck{
   font-weight: 300;
   text-transform: uppercase;
-  letter-spacing: .05em;
+  letter-spacing: .03em;
+  @include mq("tablet"){
+    letter-spacing: .05em;
+  }
   &__header{
-    @include header__deck(); 
+    @include header__deck();
+    @include mq("tablet"){
+      width: 81%;
+      max-width: 81%;
+    }
+    &--strengths{
+        @include make-row;
+
+  margin-left: 0px;
+  margin-right: 0px;
+  width: 100%;
+  max-width: 100%;
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+
+  @include vr($padding-left: 0);
+    } 
 }
   &__block{
   		@include block__deck();
@@ -490,26 +1069,52 @@ p {
 .copy{
 // @include copy();
 
+&__container{
+&--strengths{
+  margin-left: 0px;
+  margin-right: 0px;
+  width: 100%;
+  max-width: 100%;
+  flex-wrap: wrap;
+  position: relative;
+  z-index: 3;
+  display: flex;
+  @include mq("tablet"){
+      flex: 0 0 auto;
+      max-width: 61%;
+      min-height: 0;
+      display: flex;
+
+    } 
+    }
+  }
+
 &__header{
 	@include header__copy();
-}
+
+  }
+
+
+
 &__block{
 		@include block__copy();
-}
+    
+  }
+
 &__long{
 @include vr($line-height: 2.5);
-
-	
 
 	&--serif{
 		font-family: $font-family-sans-serif;
 	}
 
 }
+
 &:last-of-type{
 	margin-bottom: 0;
 }
 }
+
 
 .list{
 margin-top: 0;
